Update paper link to arXiv

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             <div class="publication-links">
               <span class="link-block">
-                <a href="#" class="button is-dark is-rounded is-outlined">
+                <a href="https://arxiv.org/abs/2601.10504" class="button is-dark is-rounded is-outlined">
                   <span class="icon"><i class="fas fa-file-pdf"></i></span>
                   <span>Paper</span>
                 </a>
