--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <tbody>
                 <tr>
                   <td><span class="badge-first">1</span></td>
-                  <td class="has-text-weight-bold">GPT-5.1-Search (OpenAI)</td>
+                  <td class="has-text-weight-bold">GPT-5.1-Search</td>
                   <td>1084</td>
                 </tr>
                 <tr>
@@ -129,7 +129,7 @@
                 </tr>
                 <tr>
                   <td><span class="badge-third">3</span></td>
-                  <td>o3-Search (OpenAI)</td>
+                  <td>o3-Search</td>
                   <td>1041</td>
                 </tr>
                 <tr>
